[metadata]
name = simple_tools-jacobitosuperstar
version = 0.0.0
author = Jacobo Mateo Bedoya Oquendo
author_email = jacobobedoya@gmail.com
description = simple tools to ease the use of more complex python functions
long_description = file: README.md
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
		Programming Language :: Python :: 3
		Programming Language :: Python :: 3 :: Only
		Programming Language :: Python :: 3.8
		Programming Language :: Python :: 3.9
		Programming Language :: Python :: 3.10
		Operating System :: OS Independent
		Intended Audience :: Developers
		Topic :: Software Development :: Libraries :: Python Modules
project_urls =
		Source = https://github.com/jacobitosuperstar/simple_tools
		Tracker = https://github.com/jacobitosuperstar/simple_tools/issues

[options]
packages =
		simple_tools-jacobitosuperstar
python_requires = >=3.8
package_dir =
		=src
zip_safe = no

[options.extras_require]
testing =
		# pytest>=6.0
		# mypy>=0.910
		flake8>=3.9

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 79
